--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
   },
   "dependencies": {
     "jquery": "^2.1.4",
+    "moment": "^2.11.0",
     "react": "^0.14.0",
     "react-dom": "^0.14.0"
   }
